update secret file for 2nd launch

--- a/app-secret.yaml
+++ b/app-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: app-secret
 type: Opaque
 data:
-  db-pass: 4oCYdnByb2RwYXNz4oCZ
-  rmq-pass: 4oCYZ3Vlc3TigJk=
+  db-pass: dnByb2RwYXNz
+  rmq-pass: Z3Vlc3Q=
