--- a/rmq-service.yaml
+++ b/rmq-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   # should match vprofile project java src/main/resources/application.properties file
-  name: vprocache01
+  name: vpromq01
 # cluster IP
 spec:
   ports:
